# FinalProject

./: CMakeLists.txt  Constants.h  FileReader.cpp  FileReader.h  Layer.cpp  Layer.h  NeuralNet.cpp  NeuralNet.h  Node.cpp  Node.h  Population.cpp  Population.h  README.md  main.cpp  tasks
inputs/: data_file_1.txt  data_file_10.txt  data_file_2.txt  data_file_3.txt  data_file_4.txt  data_file_5.txt  data_file_6.txt  data_file_7.txt  data_file_8.txt  data_file_9.txt  inputData1.txt  inputData2.txt  input_10x3_V_[-inf,inf]  input_9x1_X_[0,20]  input_9x2_XY_[-10,10]  input_9x4_V_[-inf,inf]  input_9x6_V_[-inf,inf]  input_9x7_V_[-inf,inf]  input_9x8_V_[-inf,inf]
setup/: runSetup_COR_MUTR
